// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with expenses and filters 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $1346235.75
  </h1>
</div>
`;

exports[`should render ExpenseSummary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $235.75
  </h1>
</div>
`;
